Aress7/src/objects/WorkOrder.object
<CustomObject>
    <fields>
        <fullName>Account_Text__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_Window_End_Time__c</fullName>
        <description>Arrival Window End Time from earliest SA</description>
        <label>Arrival Window End Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_Window_Start_Time__c</fullName>
        <description>Arrival Window Start Time from earliest SA</description>
        <label>Arrival Window Start Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <formula>(Case.Owner:User.FirstName)+&quot; &quot;+(Case.Owner:User.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <formula>TEXT(Case.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_in_Office__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed in Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmation_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Confirmation Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <formula>Contact.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Door_A_B__c</fullName>
        <formula>IF(INCLUDES( Case.Door_A_B__c ,&quot;A/Solo&quot;),&quot;A/Solo&quot;,null)&amp; 
IF(INCLUDES(Case.Door_A_B__c,&quot;B&quot;),&quot;B&quot;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Door A/B</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__IsFillInCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Fill In Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Prevent_Geocoding_For_Chatter_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevent Geocoding For Chatter Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Scheduling_Priority__c</fullName>
        <formula>CASE(TEXT(Priority), &apos;Critical&apos; , 1 ,&apos;High&apos; ,2,&apos;Medium&apos; ,3 , &apos;Low&apos;, 4, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduling Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__VisitingHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visiting Hours</label>
        <referenceTo>OperatingHours</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Followed_up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Followed up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Google_Drive_Folder_Link__c</fullName>
        <formula>Case.Google_Drive_Folder_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Google Drive Folder Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Groundworks_Commercial_Photos_List__c</fullName>
        <defaultValue>&quot;List of Required Photos:&quot; &amp; BR()&amp; BR()&amp; 

&quot;Completion photos (Comment Q)&quot;</defaultValue>
        <label>Groundworks (Commercial) Photos List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Groundworks_Domestic_Photos_List__c</fullName>
        <defaultValue>&quot;List of Required Photos:&quot; &amp; BR()&amp; BR()&amp; 

&quot;Completion photos (Comment Q)&quot;</defaultValue>
        <label>Groundworks (Domestic) Photos List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incomplete_Reason_Other__c</fullName>
        <label>Incomplete Reason (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incomplete_Reason__c</fullName>
        <label>Incomplete Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Works Required</fullName>
                </value>
                <value>
                    <fullName>Unsafe Working Environment</fullName>
                </value>
                <value>
                    <fullName>Customer Not Present</fullName>
                </value>
                <value>
                    <fullName>Could Not Locate Unit</fullName>
                </value>
                <value>
                    <fullName>Could Not Diagnose</fullName>
                </value>
                <value>
                    <fullName>Could Not Access Supply</fullName>
                </value>
                <value>
                    <fullName>Not Enough Time</fullName>
                </value>
                <value>
                    <fullName>Insufficient Supply</fullName>
                </value>
                <value>
                    <fullName>Insufficient Parts</fullName>
                </value>
                <value>
                    <fullName>Insufficient Tools</fullName>
                </value>
                <value>
                    <fullName>Insufficient Materials</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Sickness</fullName>
                </value>
                <value>
                    <fullName>Adverse Weather</fullName>
                </value>
                <value>
                    <fullName>Outlander Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Install_Commercial_Photos_List__c</fullName>
        <defaultValue>&quot;List of Required Photos:&quot; &amp; BR()&amp; BR()&amp; 

&quot;Installed Unit Photo - Q&quot; &amp; BR()&amp; 
&quot;Completion Photos - Q&quot; &amp; BR()&amp; 
&quot;Extra Materials Photo - Q&quot; &amp; BR()&amp; 
&quot;Unit PSL/PG Photo - P&quot; &amp; BR()&amp; BR()&amp; 

&quot;Key:&quot; &amp; BR()&amp;
&quot;P = PSL/ PG Photo&quot; &amp; BR()&amp; 
&quot;Q = Quality Photos&quot;</defaultValue>
        <label>Install (Commercial) Photos List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Install_Description__c</fullName>
        <label>Install Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Install_Domestic_Photos_List__c</fullName>
        <defaultValue>&quot;List of Required Photos:&quot; &amp; BR()&amp; BR()&amp;
 
&quot;Off Street Parking Photo - O&quot; &amp; BR()&amp; 
&quot;Unit PSL/PG Photo - P&quot; &amp; BR()&amp; 
&quot;PCB Photo - Q&quot; &amp; BR()&amp; 
&quot;Extra Materials Photo - Q&quot; &amp; BR()&amp; 
&quot;Termination Photo - Q&quot; &amp; BR()&amp; BR()&amp;

&quot;Key:&quot; &amp; BR()&amp;
&quot;O = Off-Street Parking&quot; &amp; BR()&amp; 
&quot;P = PSL/ PG Photo&quot; &amp; BR()&amp; 
&quot;Q = Quality photos&quot; &amp; BR()&amp;
&quot;S = Survey Photos&quot;</defaultValue>
        <label>Install (Domestic) Photos List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsCreatedByQuickAction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this box gets checked while creating work order through Quick Action Button.</description>
        <label>IsCreatedByQuickAction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSFUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSFUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSiteUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSiteUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maintenance_Action_Taken__c</fullName>
        <label>Maintenance Action Taken</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cable Swap</fullName>
                </value>
                <value>
                    <fullName>Changing a Key Lock</fullName>
                </value>
                <value>
                    <fullName>Decal Change</fullName>
                </value>
                <value>
                    <fullName>LED Swap</fullName>
                </value>
                <value>
                    <fullName>PCB Swap</fullName>
                </value>
                <value>
                    <fullName>Powercycle</fullName>
                </value>
                <value>
                    <fullName>RCBO Swap</fullName>
                </value>
                <value>
                    <fullName>RCBO Reset</fullName>
                </value>
                <value>
                    <fullName>Post-Install Survey</fullName>
                </value>
                <value>
                    <fullName>Router Swap</fullName>
                </value>
                <value>
                    <fullName>Router Reset</fullName>
                </value>
                <value>
                    <fullName>Unit Swap</fullName>
                </value>
                <value>
                    <fullName>Up-Rating Unit(s)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Arch 1 - 2 Swapout</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maintenance_Description__c</fullName>
        <label>Maintenance Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Maintenance_Proposed_Solution__c</fullName>
        <formula>IF(INCLUDES(Case.Maintenance_Proposed_Solution__c,&quot;Work Card 1 - No Lights&quot;),&quot;Work Card 1 - No Lights; &quot;,null)&amp;
IF(INCLUDES(Case.Maintenance_Proposed_Solution__c,&quot;Work Card 2 - Lights&quot;),&quot;Work Card 2 - Lights; &quot;,null)&amp;
IF(INCLUDES(Case.Maintenance_Proposed_Solution__c,&quot;Work Card 3 - No Comms&quot;),&quot;Work Card 3 - No Comms; &quot;,null)&amp;
IF(INCLUDES(Case.Maintenance_Proposed_Solution__c,&quot;Work Card 4 - Wrong Speed&quot;),&quot;Work Card 4 - Wrong Speed; &quot;,null)&amp; 
IF(INCLUDES(Case.Maintenance_Proposed_Solution__c,&quot;Work Card 5 - Damage&quot;),&quot;Work Card 5 - Damage; &quot;,null)&amp; 
IF(INCLUDES(Case.Maintenance_Proposed_Solution__c,&quot;Work Card 6 - Trapped Cable&quot;),&quot;Work Card 6 - Trapped Cable; &quot;,null)&amp; 
IF(INCLUDES(Case.Maintenance_Proposed_Solution__c,&quot;PCB Swap&quot;),&quot;PCB Swap; &quot;,null)&amp; 
IF(INCLUDES(Case.Maintenance_Proposed_Solution__c,&quot;Cable Swap&quot;),&quot;Cable Swap; &quot;,null)&amp; 
IF(INCLUDES(Case.Maintenance_Proposed_Solution__c,&quot;RCBO Reset&quot;),&quot;RCBO Reset; &quot;,null)&amp; 
IF(INCLUDES(Case.Maintenance_Proposed_Solution__c,&quot;Cable Swap&quot;),&quot;Cable Swap; &quot;,null)&amp; 
IF(INCLUDES(Case.Maintenance_Proposed_Solution__c,&quot;Power Cycle&quot;),&quot;Power Cycle; &quot;,null)&amp; 
IF(INCLUDES(Case.Maintenance_Proposed_Solution__c,&quot;Up-Rating Unit(s)&quot;),&quot;Up-Rating Unit(s); &quot;,null)&amp; 
IF(INCLUDES(Case.Maintenance_Proposed_Solution__c,&quot;Router Swap&quot;),&quot;Router Swap; &quot;,null)&amp; 
IF(INCLUDES(Case.Maintenance_Proposed_Solution__c,&quot;Post-Install Survey&quot;),&quot;Post-Install Survey; &quot;,null)&amp; 
IF(INCLUDES(Case.Maintenance_Proposed_Solution__c,&quot;Changing a Key Lock&quot;),&quot;Changing a Key Lock; &quot;,null)&amp; 
IF(INCLUDES(Case.Maintenance_Proposed_Solution__c,&quot;Decal Change&quot;),&quot;Decal Change; &quot;,null)&amp; 
IF(INCLUDES(Case.Maintenance_Proposed_Solution__c,&quot;Unit Swap&quot;),&quot;Unit Swap; &quot;,null)&amp; 
IF(INCLUDES(Case.Maintenance_Proposed_Solution__c,&quot;Maintenance Action - Other&quot;),&quot;Maintenance Action - Other&quot;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maintenance Proposed Solution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Return_Visit_Required__c</fullName>
        <label>Maintenance Return Visit Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maintenance_Solution_Correct__c</fullName>
        <inlineHelpText>Was the proposed solution correct?</inlineHelpText>
        <label>Maintenance Solution Correct?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maintenance_Symptom_Correct__c</fullName>
        <inlineHelpText>Was the expected maintenance symptom correct on arrival?</inlineHelpText>
        <label>Maintenance Symptom Correct?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maintenance_Symptom__c</fullName>
        <formula>Case.Maintenance_Symptom__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maintenance Symptom</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missing_Comment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If feed item is created on WO without any comment.</description>
        <label>Missing Comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Network_Assurance_Followed_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Network Assurance Followed Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OLEV__c</fullName>
        <formula>Case.OLEV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OLEV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>CASESAFEID( Case.Opportunity__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <formula>Case.Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSL_PG_Number__c</fullName>
        <formula>Case.Unit_PSL_PG_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit PSL/PG Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_Duration__c</fullName>
        <description>Sum of all Duration fields from child SAs</description>
        <label>Planned Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <formula>PostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <formula>TEXT(Case.Project_Manager__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_Review_Notes__c</fullName>
        <label>RM Review Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RM_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RM Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <description>Reference id from parent Case</description>
        <formula>Case.Reference_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected_Reason__c</fullName>
        <label>Rejected Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>Additional Works Quote Rejected</fullName>
                </value>
                <value>
                    <fullName>Not Enough Supply</fullName>
                </value>
                <value>
                    <fullName>Car Order Cancelled</fullName>
                </value>
                <value>
                    <fullName>Customer Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheduled_Start_Date_Time__c</fullName>
        <description>Scheduled Start Date &amp; Time from earliest scheduled service appointment</description>
        <label>Scheduled Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_Start_Date__c</fullName>
        <label>Scheduled Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduling_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Scheduling Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Install_Question_Details__c</fullName>
        <description>Sync it from the linked Case.</description>
        <label>Standard Install Question Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Survey_Bonding_Issue__c</fullName>
        <label>Survey - Bonding Issue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Commercial_Photos_List__c</fullName>
        <defaultValue>&quot;List of Required Photos:&quot; &amp; BR()&amp; BR()&amp; 

&quot;Unit Location Photo&quot; &amp; BR()&amp; 
&quot;Cable Route Photo(s))&quot; &amp; BR()&amp; 
&quot;Consumer Unit Photo(s)&quot; &amp; BR()&amp; 
&quot;Mains Supply Photo&quot; &amp; BR()&amp; 
&quot;Earth/ Bonding Photo&quot; &amp; BR()&amp; BR()&amp; 

&quot;Comment &apos;S&apos; for all Survey photos.&quot;</defaultValue>
        <label>Survey (Commercial) Photos List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Description__c</fullName>
        <label>Survey Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Domestic_Photos_List__c</fullName>
        <defaultValue>&quot;List of Required Photos:&quot; &amp; BR()&amp; BR()&amp; 

&quot;Unit Location Photo&quot; &amp; BR()&amp; 
&quot;Off Street Parking Photo&quot; &amp; BR()&amp; 
&quot;Cable Route Photo(s)&quot; &amp; BR()&amp; 
&quot;Consumer Unit Photo(s)&quot; &amp; BR()&amp; 
&quot;Mains Supply Photo&quot; &amp; BR()&amp; 
&quot;Earth / Bonding Photo&quot; &amp; BR()&amp; BR()&amp; 

&quot;Comment &apos;S&apos; for all Survey photos.&quot;</defaultValue>
        <label>Survey (Domestic) Photos List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Earthing_Arrangements__c</fullName>
        <label>Survey - Earthing Arrangements</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TNCS</fullName>
                </value>
                <value>
                    <fullName>TNS</fullName>
                </value>
                <value>
                    <fullName>TT</fullName>
                </value>
                <value>
                    <fullName>Not sufficient</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_House_Type__c</fullName>
        <label>Survey - House Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Detached</fullName>
                </value>
                <value>
                    <fullName>Semi-Detached</fullName>
                </value>
                <value>
                    <fullName>Terraced</fullName>
                </value>
                <value>
                    <fullName>Flats</fullName>
                </value>
                <value>
                    <fullName>Bungalow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Main_Fuse_Amps__c</fullName>
        <label>Survey - Main Fuse (Amps)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>60A</fullName>
                </value>
                <value>
                    <fullName>80A</fullName>
                </value>
                <value>
                    <fullName>100A</fullName>
                </value>
                <value>
                    <fullName>3 Phase</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Max_Demand_Amps__c</fullName>
        <label>Survey - Max Demand (Amps)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Max_Demand_Issue__c</fullName>
        <label>Survey - Max Demand Issue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>No with load management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Meter_Location__c</fullName>
        <label>Survey - Meter Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outside house</fullName>
                </value>
                <value>
                    <fullName>Front porch/ hallway</fullName>
                </value>
                <value>
                    <fullName>Under stairs</fullName>
                </value>
                <value>
                    <fullName>Cellar</fullName>
                </value>
                <value>
                    <fullName>Upstairs</fullName>
                </value>
                <value>
                    <fullName>Garage</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Non_standard_Install__c</fullName>
        <label>Survey - Non-standard Install</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_OLEV_Qualifies__c</fullName>
        <label>Survey - OLEV Qualifies</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Supply_Setup__c</fullName>
        <label>Survey - Supply Setup</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Issue - Meter</fullName>
                </value>
                <value>
                    <fullName>No Issues - Meter</fullName>
                </value>
                <value>
                    <fullName>Issue - Main consumer unit</fullName>
                </value>
                <value>
                    <fullName>No Issues - Main consumer unit</fullName>
                </value>
                <value>
                    <fullName>No Issues - Garage consumer unit</fullName>
                </value>
                <value>
                    <fullName>Issue - Garage consumer unit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technician_Email__c</fullName>
        <label>Technician Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician_Notes__c</fullName>
        <label>Technician Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Technician__c</fullName>
        <label>Technician</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timesheet_Duration__c</fullName>
        <description>Sum of all Timesheet Duration fields from child SAs</description>
        <label>Timesheet Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <formula>Case.UUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Architecture__c</fullName>
        <formula>text( Case.Unit_Architecture__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Architecture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkOrder_CompletedOrIncomplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this check box is created to check where this WO is completed just now, to avoid recursion in trigger.</description>
        <label>WorkOrder CompletedOrIncomplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Order_Description__c</fullName>
        <label>Work Order Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work_Type_Text__c</fullName>
        <formula>WorkType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Type</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_WorkOrders</fullName>
        <columns>Name</columns>
        <columns>WorkType</columns>
        <columns>Owner</columns>
        <columns>Case_Owner__c</columns>
        <columns>Subject</columns>
        <columns>Account</columns>
        <columns>Priority</columns>
        <columns>Status</columns>
        <columns>Technician__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Work Orders</label>
        <language>en_US</language>
        <sharedTo>
            <group>Commercial_Install_Team</group>
            <group>HC_Ops_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>C_Unconfirmed</fullName>
        <booleanFilter>(1 OR 2) AND 3 AND 4 and 5 and 6</booleanFilter>
        <columns>Name</columns>
        <columns>Work_Type_Text__c</columns>
        <columns>Account</columns>
        <columns>Contact</columns>
        <columns>Case</columns>
        <columns>Postcode__c</columns>
        <columns>Technician__c</columns>
        <columns>Status</columns>
        <columns>Scheduled_Start_Date__c</columns>
        <columns>Customer_Confirmation__c</columns>
        <columns>Case_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType</field>
            <operation>equals</operation>
            <value>WorkOrder.Groundworks,WorkOrder.Commercial_Install</value>
        </filters>
        <filters>
            <field>WorkType</field>
            <operation>equals</operation>
            <value>Survey (Commercial)</value>
        </filters>
        <filters>
            <field>Scheduled_Start_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:9</value>
        </filters>
        <filters>
            <field>Customer_Confirmation__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Account</field>
            <operation>notContain</operation>
            <value>test</value>
        </filters>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>Scheduled</value>
        </filters>
        <label>Unconfirmed Next Week (C)</label>
        <language>en_US</language>
        <sharedTo>
            <group>Commercial_Install_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Commercial_Unconfirmed</fullName>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>Contact</columns>
        <columns>Scheduled_Start_Date_Time__c</columns>
        <columns>Status</columns>
        <columns>Work_Type_Text__c</columns>
        <columns>Technician_Notes__c</columns>
        <columns>Customer_Confirmation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType</field>
            <operation>equals</operation>
            <value>WorkOrder.Survey</value>
        </filters>
        <filters>
            <field>Customer_Confirmation__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>Scheduled,Confirmed</value>
        </filters>
        <filters>
            <field>Account</field>
            <operation>notContain</operation>
            <value>test</value>
        </filters>
        <label>Unconfirmed Surveys (C)</label>
        <language>en_US</language>
        <sharedTo>
            <group>Commercial_Install_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Commercial_WOs</fullName>
        <columns>Name</columns>
        <columns>Subject</columns>
        <columns>Account</columns>
        <columns>Status</columns>
        <columns>WorkType</columns>
        <columns>Contact</columns>
        <columns>Customer_Confirmation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Work_Type_Text__c</field>
            <operation>contains</operation>
            <value>commercial</value>
        </filters>
        <filters>
            <field>Account</field>
            <operation>notContain</operation>
            <value>test</value>
        </filters>
        <label>Commercial WOs</label>
        <language>en_US</language>
        <sharedTo>
            <group>Commercial_Install_Team</group>
        </sharedTo>
    </listViews>
</CustomObject>